correct footer link positon on mobile

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -81,6 +81,7 @@ div.footer-column {
 
 ul.footer-links-list {
   margin-bottom: 2rem;
+  padding: 0;
 
   li {
     display: inline-block;
